# Admin-Panel-for-CXP

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yaml
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/from-devz-loader/: FromDevzLoader.tsx
src/components/: ProtectedRoute.tsx
src/components/add-edit-buttons/: AddEditButtons.tsx
src/components/button/: FromDevzButton.tsx
src/components/form/: LoginForm.tsx
src/components/icons-svg/: FromDevzIcon.tsx
src/components/nav-bar/: NavBar.tsx
src/components/publications-form/: PublicationsForm.tsx
src/components/snackbar/: SnackBar.tsx
src/components/table/: Table.tsx
src/components/types/: ConsultorType.tsx  ProjectType.tsx  PublicationType.tsx  ServiceType.tsx
src/components/updater-notification/: UpdaterNotification.tsx
src/context/: UserContext.tsx
src/hooks/: useDb.ts  useStorage.ts
src/pages/: Archivos.tsx  Consultores.tsx  Dashboard.tsx  EditPublicacion.tsx  Imagenes.tsx  Login.tsx  NewPublicacion.tsx  Proyectos.tsx  Publicaciones.tsx
src/pages/archivos/: Archivos.tsx  NewArchivo.tsx
src/pages/consultores/: Consultores.tsx  EditConsultores.tsx  NewConsultor.tsx
src/pages/dashboard/: Dashboard.tsx  Login.tsx
src/services/: firebase.ts
src/utils/: checkUpdates.ts  decodeFirebaseUrl.ts  getServicios.ts  truncateText.ts
~/.tauri/: myapp.key  myapp.key.pub
(+13 files in other folders)
